--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
-<<<<<<< HEAD
-=======
-    "@mui/lab": "^5.0.0-alpha.128",
->>>>>>> b98de5a27d85945d7ec6858fd1f2cd8eab05a496
+    "@mui/lab": "latest",
     "@mui/material": "latest",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "charts.css": "^0.9.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
